@@ -1,6 +1,7 @@
 == 2.8.3 ==
 Release date: 
 * Enhancement: Added has_widget_inner_wrapper to support “Optimized Markup” experiment
+* Enhancement: Instagram Feed - Updated Choose Arrow option
 * Fixed: Animation Gradient Background
 
 == 2.8.2 ==
